--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Matthew Turney",
   "license": "ISC",
   "dependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
     "express": "^4.13.3",
     "passport": "^0.3.0",
     "passport-oauth2": "^1.1.2"
