--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
+    "cookie-parser": "1.4.0",
     "express": "^4.13.3",
+    "express-session": "1.11.3",
     "passport": "^0.3.0",
     "passport-oauth2": "^1.1.2"
   },
